# vibe-harness

./: .gitignore  .mcp.json  LICENSE  README.md  drizzle.config.ts  haiku.md  next.config.ts  package-lock.json  package.json  tsconfig.base.json
.github/: copilot-instructions.md
daemon/: drizzle.config.ts  nitro.config.ts  tsconfig.json
daemon/drizzle/: 0002_hot_thaddeus_ross.sql  0003_wealthy_golden_guardian.sql  0004_familiar_miss_america.sql  0005_split_config.sql
daemon/src/: app.ts  index.ts
daemon/workflows/: test-workflow.ts
docker/: Dockerfile.copilot
docker/agent-configs/: copilot-cli.json
docker/mcp-bridge/: vibe-mcp-bridge.js
docs/: CDD-api.md  CDD-gui.md  CDD-schema.md  CDD-services.md  CDD-workflow.md  SAD.md  SRD.md
gui/: components.json  index.html  package.json  vite.config.ts  vitest.config.ts
gui/sidecar/: daemon-stub.mjs
gui/src/: App.tsx
gui/src-tauri/: Cargo.toml
plans/: build.md  mcps-and-skills.md
scripts/: acp-testbench.mjs
shared/: package.json  tsconfig.json
shared/src/: api.ts  enums.ts  events.ts
src/app/: global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
src/hooks/: use-task-form-data.ts
src/lib/: status-config.tsx  types.ts
src/types/: domain.ts
v1/: haiku.md  package.json
v1/docker/: Dockerfile.copilot  build.sh
v1/public/: state-machines.html
v2/: .gitignore  README.md  package-lock.json  package.json
v2/gui/src-tauri/: Cargo.toml  tauri.conf.json
v2/gui/src-tauri/capabilities/: default.json
v2/gui/src-tauri/icons/: icon.icns
v2/gui/src-tauri/src/: lib.rs  main.rs
(+457 files in other folders)
