[package]
name = "vibe-harness-gui"
version = "0.1.0"
edition = "2021"

[lib]
name = "vibe_harness_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-mcp-bridge = "0.10"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
libc = "0.2"
